# sovereign-epistemic-commons-poc

./: .gitignore  CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  result_summary.md
.github/: FUNDING.yml
configs/: ablation_depth_discount_mild.yaml  ablation_depth_discount_none.yaml  ablation_depth_discount_strong.yaml  base_v2.yaml  baseline.yaml  contamination_stress.yaml  default.yaml  default_confirmatory.yaml  fork_stress.yaml  full_sec_lite.yaml  lanes_discount.yaml  lanes_only.yaml  tuned_demo.yaml
docs/: publication_cleanup.md
logs/v1_exploratory/: baseline_scripted_11.jsonl  baseline_scripted_17.jsonl  baseline_scripted_23.jsonl  full_sec_lite_ollama_gemma3_1b_11.jsonl  full_sec_lite_ollama_gemma3_4b_11.jsonl  full_sec_lite_scripted_11.jsonl  full_sec_lite_scripted_17.jsonl  full_sec_lite_scripted_23.jsonl  lanes_discount_scripted_11.jsonl  lanes_discount_scripted_17.jsonl  lanes_discount_scripted_23.jsonl  lanes_only_scripted_11.jsonl  lanes_only_scripted_17.jsonl  lanes_only_scripted_23.jsonl
results/v1_exploratory/: manifest.json  (+2 more)
scripts/: calibrate_stress_worlds.py  make_figures.py  make_v2_figures.py  patch_result_ids.py  run_batch.py  run_single.py  run_v2_aux_llm.py  run_v2_confirmatory.py  summarize_results.py  summarize_v2.py
sec_poc/: __init__.py  agents.py  commons.py  experiments.py  logging_utils.py  metrics.py  ollama_backend.py  plotting.py  policies.py  schemas.py  simulator.py  v2_analysis.py
tests/: test_exit_policy.py  test_lanes.py  test_metrics.py  test_replay.py  test_v2_config_and_recovery.py
(+597 files in other folders)
